# Partially-Randomized-Trotter

./: .gitignore  Partial Randomized Study Protocol.md  README.md  README_partial_randomized_pf.md  VALIDATION_STATUS.md  abe_trotter_project.ipynb  codex-inst.md  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/workflows/: validation-manifest.yml
artifacts/: validation_manifest.json
artifacts/partial_randomized_pf/: H2_eps_1.000e-03_partial_randomized_pf.json  H2_kappa_fixed_check.json  (+11 more)
notes/: partial_randomized_pf_notes.md  pauli_partial_s2_cgs_h2_h3_validation_20260722.md  uwc_current_implementation_and_results.md
scripts/: analyze_df_ld_direction_trend.py  benchmark_df_ground_state.py  cache_grouping_step_costs.py  check_partial_randomized_diagnostics.py  check_validation_manifest.py  compare_df_error_budget_rules.py  compare_df_error_budget_rules_from_summaries.py  export_df_cgs_cost_table.py  plot_df_optimized_costs.py  plot_df_partial_grouping_cost_comparison.py  profile_h5_8th_cgs.py  run_df_anchor_refinement_pipeline.py  run_df_ground_state.py  run_df_ld_window_cgs.py  run_df_screening_anchor_cgs_h3_h14.py  run_df_screening_cost_minimization.py  run_grouped_uwc_pf_qpe.py  run_grouped_uwc_theta_sweep.py  run_h5_df_cgs_gpu_slopes.py  run_h9_ld5_df_cgs_ground_cache_slope_check.py  run_partial_randomized_pf.py  run_uwc_grouped_alpha_h2_h6.py  validate_pauli_partial_cgs_all_prefixes.py
tests/: test_df_hamiltonian.py  test_df_partial_randomized_pf.py  test_grouped_uwc_comparison.py  test_pauli_partial_cgs_validation.py  test_uwc_preprocessor.py
(+62 files in other folders)
